colmar_academy-main/resources/css/stylesheet.css
html{
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
}
body{
    margin:.5rem;
}
main{
    width: 100%;

}
/*html, body{
    box-sizing: border-box;*/
/*height: auto;*/
/*Header Contener*/
header{
    box-sizing: content-box;
    display: inline-flex;
    height:4rem;
    width: 100%;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    background-color: aliceblue;
    align-items: stretch;
}
.menue-bar-desktop{
    width: 100%;
    display:flex;
}
.company-logo{
    display: inline-flex;
    align-items: center;
}
.logo{
    margin-top: 1rem;
    margin-bottom: 1rem;
    height: 2rem;
    align-items: center;
}
#logo-text{
    text-align: justify;
    
}
.header-container{
    display:inline;
    display: block;
}
.nav-desk{
    width: 100%;
    margin-right: 1.5rem;
    display: inline-flex;
    align-items: center;
    justify-content:flex-end;
}
.menue-bar-mobile{
    width: 100%;
    height: 64px;
    align-items:center;
    justify-items: center;
}
.nav-mobile{
    width: 80%;
    padding: 16px;
    display: flex;
    justify-content:space-around;
}
.nav-mobile-img{
    width: auto;
}

ul{
    list-style-type: none;
    display:flex;
    border-width: 1rem;
}

li{
    margin-left: 1rem;
    margin-right: 1rem;
    align-items:left;
    align-items: flex-end;
}


.benner-article{
    background-color:gray;
    width: 100%;
    display: inline-flex;
    text-align: center;
    margin-left: 1.5rem;
}

.banner-container{
    box-sizing:border-box;
    margin: 2rem 1.5rem;
    width: 60%;
}
.banner-container, img{
    width: 100%;
}

.article{
    /*margin: 1.5rem;*/
    /*display: flex;
    flex-direction:column;*/
    text-align: left;

    }
    h1{
        margin-top:5rem;
        font-size: 2.5rem;
        font-weight:700;
    }

button{
    width: 70%;
    font-size: 2.0rem;
    border:.5rem;
    background-color:black;
    color:white;
}
.information-container{
    display: flex;
    margin-left: 1.5rem;
}
.information-container-main{
    width:60%;

}
.imag-main{ 
    width: 95%;
    margin-top: 2rem;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
}
h2{
    margin: 2rem 1.5rem 1.5rem;
    text-align: center;
    font-size: 2.5rem;
}
.information-paragraf{
    margin-right: 1.5rem;
    margin-left: 1.5rem;
    margin-bottom: 2rem;

}
.information-container-info{
    display: table;
    flex-direction: column;
    width:40%;
}
.information-container-gests{
    width: 40%;
    display: inline-flex;
}
.information-img-container{
    display:flexbox;
    width:35%;
    margin-top: 2rem;
}
.info-img{
    width:35%;
    height:auto;
    margin:1rem;
}

.date-container{
    display: flex;
    flex-direction: column;
    align-items:center;
}
h3{
    font-size: 2rem;
}
.orientation-container{
    margin-top: 2rem;
    width: 100%;
    display: flex;
    justify-content:space-around;
}
.campus-container{
    width: 100%;
    display: flex;
    justify-content:space-around;
}
.info-text{
    align-items:center;
    margin: 1rem;
}
.guest-container{
    display: flex;
    background-color:gray;
    margin-left: 1rem;
    justify-content:space-around;
}
.title1{
    margin: 2rem;
    width: 100%;
}
.start-learning-container{ 
    box-sizing:content-box;      
    /*background-color:lightgray;*/
    width:100%;
    }
.corses-container{
    text-align: center;
    width: 100%;
    display: flex;
    justify-content:space-around;
    margin-top: 2rem;
    margin-left: 4.5rem;
    margin-right: 4.5rem;
    }
.corses-img{
    width: auto;
}
.learning-container1{
    margin-right: 2rem;
    margin-bottom: 2rem;
}
.learning-container2{
    margin-right: 2rem;
}
.learning-container3{
    margin-bottom: 2rem;
    margin-right: 4.5rem;
}
h5{
    margin:8px;
}
.exhibit-contaniner{
    display: flex;
    width: 100%;
    height: max-height;
    }
.exhibitsub1{
    box-sizing:content-box;
    width: 60%;
    margin: 2rem 1.5rem;
}
/*.exhibitsub-video {
    margin-left: 24px;
    width: 100%;
    height: auto;
    
}*/
.video-thesis {
width:max-content;
object-fit: cover;
}
.exhibitsub2{
    box-sizing: content-box;
    width:40%;
}
.container-fisma{
    background-color:rgb(189, 186, 186);
    margin-top: 2rem;
    display:flex;
    flex-direction: row;

}
.img-fisma{
    box-sizing: content-box;
    width:35%;
    height: auto;
    margin: 1rem;
}
.container-fisma-text{
    width:65%;
}
.container-now-then{
    display: flex;
    flex-direction: row;
}
.container-now-then-text{
    width:100%;
    display: flex;
    flex-direction:column;
    align-items:center;
    justify-content:center;
}
footer{
    margin-left: 1.5rem;
}
@media  (max-width: 940px) {
    html{
        font: size .5em;        
    }
    body{
        width: 100%;
    }
    h1{
        font-size: 1.5rem;
        margin:2rem 1rem ;
    }
    h2{
        font-size: 1.25rem;
    }
    .article, p{
        font-size:1rem;
        margin-left: 1rem; 
    }
    .menue-bar-desktop{
        display: none;
    }
    .benner-article{
        flex-direction:column;
    }
    .banner-container{
        min-width: 240px;
        margin: 0 auto;
    }
    .information-container{
        display: none;
    }
    .info-img{
        width:98%;
        min-width: 240px;
        margin: 1.5rem;
    }
    .inf-text{
        margin-left: 2rem;
        text-align: left;
    }
    .info-text, h3, p, a{
        margin-left: 1rem;
    }
    h3{
        font-size: 1rem;
        border:1em 1em 1.5em;
    }
    .corses-container{
        flex-direction:column;
    }
    .corses-img{
        display:none;
    }
    .corses-container{
        display: none;
    }
    hr{
        margin-top:32px;
    }
    .title1{
        margin-top: 32px;
        text-align: center;
    }
    .learning-mobile-text{
        background-color:rgb(233, 231, 231);
        padding-left: 1em;
        padding-top: 1em;
        padding-bottom: 1.5em;
    }
    .exhibit-contaniner{
        display: none;
    }
    .exhibitsub2{
        display: none;
    }
    .video-thesis{
        object-fit: scale-down;
        max-width: 100%;
    }
}
@media   (min-width:940px) {
    .menue-bar-mobile{
        display:none;
    }    
    .information-container-mobile{
        display:none;
    }
    .learning-container-mobile{
        display:none;
    }
    .exibit-contanier-mobile{
        display:none;
    }
    /*.information-container-info{
        flex-direction:column;
    }
    Benner article
}
video{
    width: fit-content;
    height: auto;
    
    
}*/

